Compiler-warning sweep: clear originally-surfaced 100-warning lint pass
- Delete vestigial equals overrides on TileQuarry's three Task inner
  classes (single-instance field, never compared)
- Delete dead buildcraft.api.library subsystem (4 @Deprecated classes
  plus unused ILibraryTypeHandler interface — zero external callers)
- Rename StatementManager.registerParameter(String,IParamReaderBuf) to
  registerParameterBuf to clear the [overloads] ambiguity warning
- Class.newInstance() -> getDeclaredConstructor().newInstance() in
  ResourceId.load
- Guava Charsets.UTF_8 -> StandardCharsets.UTF_8 in PacketBufferBC
- SchematicBlock/EntityFactory.compareTo gain proper generic signatures
- InvalidInputDataException gets serialVersionUID
- Box.reset marked final (no subclasses, kills the this-escape at source)
- Targeted @SuppressWarnings on SpriteHolderRegistry (vanilla deprecated
  LOCATION_BLOCKS/_ITEMS with no replacement Identifier yet), schematic
  registry casts, ItemHandlerManager array creation, and the six
  remaining this-escape constructors

The original 100-warning count was the javac -Xmaxwarns default cap;
real total was 504, with ~408 still open under the existing todos.md
"Deprecation and warning fixes" finalization item.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>